<resources>
    <string name="app_name">FoodRecipeApp</string>
    <string name="favourite">Favourite</string>
    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="trending_recipes">Trending Recipes</string>
    <string name="what_s_on_your_mind">What\'s on your mind?</string>
    <string name="categories">Categories</string>
    <string name="area">Area</string>
    <string name="ingredients">Ingredients</string>
</resources>