<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/llHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/tvHome"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:fontFamily="@font/myfont"
                        android:text="Home"
                        android:textColor="@color/purple_700"
                        android:textSize="@dimen/_25ssp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_baseline_search_24" />

                </LinearLayout>

                <TextView
                    android:id="@+id/tv_Whats_on_your_mind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/myfont"
                    android:text="@string/what_s_on_your_mind"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_17ssp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@id/llHeader"
                    app:layout_constraintTop_toBottomOf="@id/llHeader" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/random_img_card_view"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_140sdp"
                    android:layout_marginStart="@dimen/_25sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_25sdp"
                    app:cardCornerRadius="@dimen/_10sdp"
                    app:cardUseCompatPadding="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_Whats_on_your_mind">

                    <ImageView
                        android:id="@+id/iv_random_food"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"/>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/tv_trending_recipes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/myfont"
                    android:text="@string/trending_recipes"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_17ssp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@id/tv_Whats_on_your_mind"
                    app:layout_constraintTop_toBottomOf="@id/random_img_card_view" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_Trending_recipes"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_90sdp"
                    android:layout_marginStart="@dimen/_25sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_trending_recipes" />

                <TextView
                    android:id="@+id/tv_categories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/myfont"
                    android:text="@string/categories"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_17ssp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@id/tv_trending_recipes"
                    app:layout_constraintTop_toBottomOf="@+id/rv_Trending_recipes" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardview_categories"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_25sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:outlineProvider="none"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_categories">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_categories"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scrollbars="none" />

                </androidx.cardview.widget.CardView>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
